# sb-beer-scrape

./: .gitignore  pyproject.toml
src/: beer.py  main.py  page_loader.py  parser.py  scraper.py
